fixed Z-index of hamburgerMenu

--- a/main.css
+++ b/main.css
@@ -55,6 +55,7 @@
   min-height: 100%;
   top: 0;
   background-color: rgba(255, 255, 255, 0);
+  z-index: 50;
   opacity: 0;
   visibility: hidden;
   transition: background-color 0.5s, opacity 0.5s, visibility 0.5s;
