--- a/src/header.scss
+++ b/src/header.scss
@@ -45,6 +45,7 @@
     min-height: 100%;
     top: 0;
     background-color: rgba(255, 255, 255, 0);
+    z-index: 50;
     opacity: 0;
     visibility: hidden;
     transition:
